# test

./: app.py  main.py  pyproject.toml
anime_data/1/: 1.json
anime_data/10/: 10.json
anime_data/100/: 100.json
anime_data/1000/: 1000.json
anime_data/1001/: 1001.json
anime_data/1002/: 1002.json
anime_data/1003/: 1003.json
anime_data/1004/: 1004.json  data.json
anime_data/1005/: 1005.json
anime_data/1006/: 1006.json
anime_data/1007/: 1007.json
anime_data/1008/: 1008.json
anime_data/1009/: 1009.json
anime_data/101/: 101.json
anime_data/1010/: 1010.json
anime_data/1011/: 1011.json
anime_data/1012/: 1012.json
anime_data/1013/: 1013.json
anime_data/1014/: 1014.json
anime_data/1015/: 1015.json
anime_data/1016/: 1016.json
anime_data/1017/: 1017.json
anime_data/1018/: 1018.json  data.json
anime_data/1019/: 1019.json
anime_data/102/: 102.json
anime_data/1020/: 1020.json
anime_data/1021/: 1021.json
anime_data/1022/: 1022.json
anime_data/1023/: 1023.json  data.json
anime_data/1024/: 1024.json
anime_data/1025/: 1025.json
anime_data/1026/: 1026.json
anime_data/1027/: 1027.json  data.json
anime_data/1028/: 1028.json
anime_data/1029/: 1029.json  data.json
anime_data/103/: 103.json
anime_data/1030/: 1030.json
anime_data/1031/: 1031.json
anime_data/1032/: 1032.json  data.json
anime_data/1033/: 1033.json
anime_data/1034/: 1034.json
anime_data/1035/: 1035.json
anime_data/1036/: 1036.json
anime_data/1037/: 1037.json  data.json
anime_data/1038/: 1038.json  data.json
anime_data/1039/: 1039.json
(+3537 files in other folders)
